		-[Core] The Container.GetInitializer<TService>() method has been removed from the container. The
		 method cluttered the main API. The method is moved to the AdvancedExtensions class of the
		 SimpleInjector.Advanced namespace. (work item 18349).
		-[Integration.Web] The PerWebRequestInstanceCreator<TService> has been removed. The
		 WebRequestLifestyle can be used instead.
		-[Extensions] RegisterAll, RegisterDecorator, RegistereOpenGeneric, and RegisterManyForOpenGeneric
		 extension methods have been moved to the core library.

	Bug fixes:
		-[Extensions] RegisterDecorator wrapped singletons twice. This was caused by the ExpressionBuilt event
		 that was triggered twice for singletons. (work item 19110)
		-[Extensions.LifetimeScoping] Registration order of RegisterDecorator and RegisterLifetimeScope
		 mattered for the lifetime op the decorator. (work item 19120)
		-[Integration.Web] Registration order of RegisterDecorator and RegisterPerWebRequest mattered for the 
		 lifetime op the decorator. (work item 19120)
		-[Integration.Wcf] Registration order of RegisterDecorator and RegisterPerWcfOperation mattered for the 
		 lifetime op the decorator. (work item 19120)


Version vNext
	General description:

	Bug fixes:
		-[Extensions] RegisterDecorator extension methods did not check whether the registered decorator type
		 contained a constructor argument that the type implemented. This allowed registration of decorators
		 that could never be used. (work item 18956)
		-[Extensions.LifetimeScoping] Registrations made using RegisterLifetimeScope could be invalidated by
		 other RegisterLifetimeScope registrations in case AllowOverridingRegistrations was set to true and
		 Verify was called in between. (work item 19119)


Version 1.6.1 (v1.6.1 RTM) 2012-12-12
	General description:
		The integration packages that were targetted at .NET 4.0 were incorrectly targetted at .NET 4.5. This